front-back-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: magic-cloud-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: magic-cloud.info
      http:
        paths:
          # Frontend accessible à "/"
          - path: /
            pathType: Prefix
            backend:
              service:
                name: magic-cloud
                port:
                  number: 3000
          # Backend accessible à "/api"
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: magic-cloud-back
                port:
                  number: 8080
